Completé la majorité de la validation. Reste a faire les graphiques. Potentiellement besoin de remanier les variables pour que ce soit plus JSON-y et moins spécifié en fonction de React Charts
