# serveur/src/api/routes/validation.ts
@@ -761,10 +761,10 @@ export const creationRouteurValidation = (pool: Pool): Router => {
             let query: string
             let result: any;
             query = `SELECT 
-                    rv.id_val,
-                    rv.id_strate,
+                    rv.id_val::int,
+                    rv.id_strate::int,
                     rv.g_no_lot,
-                    rv.n_places,
+                    rv.n_places::int,
                     rv.fond_tuile
                 FROM
                     public.resultats_validation rv
@@ -1121,7 +1121,7 @@ export const creationRouteurValidation = (pool: Pool): Router => {
     router.get('/resultats', obtiensResultats)
     router.post('/resultats', nouveauResultat)
     router.put('/resultats/:id', modifieResultat)
-    router.delete('resultats/:id', supprimeResultat)
+    router.delete('/resultats/:id', supprimeResultat)
     router.get('/graphiques', genereGraphiqueComparaison)
     router.get('/popu-strate',obtiensComptesStrates)
     return router;
